mongo db class and updated dev scripts

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ APP_USER=app_user
 APP_PWD=app_user()
 DB_NAME=MeanUrls
 DB_COLLECTION_NAME=Urls
+MONGO_HOSTNAME=mongodb
+MONGO_HOSTNAME_TEST=mongodb_test
