--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "ng build",
     "lint": "ng lint",
     "clean": "rm -rf ./dist/api && rm -rf .dist/public",
-    "cp:www": "mkdir -p ./dist/api/bin && cp ./server/bin/www ./dist/api/bin",
-    "dev": "concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"cd ./dist/api && nodemon -r ./bin/www --watch\" \"ng serve --proxy-config=proxy.conf.json\"",
+    "cp:www": "mkdir -p ./dist/api/bin && cp ./server/bin/www ./dist/api/bin && cp ./.env ./dist/api/bin",
+    "dev": "concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"cd ./dist/api && nodemon -r dotenv/config ./bin/www --watch\" \"ng serve --proxy-config=proxy.conf.json\"",
+    "dev:change": "nodemon -r dotenv/config ./dist/api/bin/www --watch",
+    "dev:change2": "concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"nodemon -r dotenv/config ./dist/api/bin/www --watch\" \"ng serve --proxy-config=proxy.conf.json\"",
     "mongo": "docker-compose up",
     "mongo:up": "docker-compose up",
     "mongo:clean": "docker-compose down && docker volume rm meanurls_mean_urls_data",
@@ -27,7 +29,9 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -38,6 +42,7 @@
     "@angular/compiler-cli": "~11.0.1",
     "@types/express": "^4.17.11",
     "@types/jasmine": "~3.6.0",
+    "@types/mongodb": "^3.6.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
