--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "ng build",
     "lint": "ng lint",
     "clean": "rm -rf ./dist/api && rm -rf .dist/public",
-    "cp:www": "mkdir -p ./dist/api/bin && cp ./server/bin/www ./dist/api/bin && cp ./.env ./dist/api/bin",
-    "dev": "concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"cd ./dist/api && nodemon -r dotenv/config ./bin/www --watch\" \"ng serve --proxy-config=proxy.conf.json\"",
+    "cp:www": "mkdir -p ./dist/api/bin && cp ./server/bin/www ./dist/api/bin",
+    "devold": "concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"cd ./dist/api && nodemon -r dotenv/config ./bin/www --watch\" \"ng serve --proxy-config=proxy.conf.json\"",
     "dev:change": "nodemon -r dotenv/config ./dist/api/bin/www --watch",
-    "dev:change2": "concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"nodemon -r dotenv/config ./dist/api/bin/www --watch\" \"ng serve --proxy-config=proxy.conf.json\"",
+    "dev": "concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"nodemon -r dotenv/config ./dist/api/bin/www --watch\" \"ng serve --proxy-config=proxy.conf.json\"",
     "mongo": "docker-compose up",
     "mongo:up": "docker-compose up",
     "mongo:clean": "docker-compose down && docker volume rm meanurls_mean_urls_data",
